--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,28 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+/* button */
+
+a {
+  text-decoration: none;
+  padding: .5em;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.btn {
+  display: inline-block;
+  background-color: #333;
+  color: #fff;
+  border-width: 3px;
+  font-size: 1.125rem;
+}
+
+.btn:hover {
+  background-color: #000;
+}
+
+.btn-small {
+  font-size: .875rem;
+}
